--- a/order_consumer/src/main/resources/templates/pages/page/kitchen.html
+++ b/order_consumer/src/main/resources/templates/pages/page/kitchen.html
@@ -122,7 +122,7 @@
 							<li><a href="/pages/users/modifyuser.html" target="mainwindow">修改我的密码</a></li>
 							<li role="separator" class="divider"></li>
 						</ul></li>
-					<li><a href="/login.html">退出登录</a></li>
+					<li><a href="/loginout">退出登录</a></li>
 				</ul>
 			</div>
 		</div>
