--- a/order_consumer/src/main/resources/templates/pages/page/admin.html
+++ b/order_consumer/src/main/resources/templates/pages/page/admin.html
@@ -50,7 +50,7 @@
 								<li><a href="/pages/admin/onlinewaiters.html" target="mainwindow">查看当前在线的点餐员 <span class="badge" style="background-color: orange;">4</span></a></li>
 							</ul>
 						</li>
-						<li><a href="javascript:newOrder()">退出登录</a></li>
+						<li><a href="/loginout">退出登录</a></li>
 					</ul>
 				</div>
 			</div>
