--- a/order_consumer/src/main/resources/templates/pages/page/waiterpage.html
+++ b/order_consumer/src/main/resources/templates/pages/page/waiterpage.html
@@ -110,10 +110,10 @@
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
-						<li><span class="navbar-brand">点单界面：当前桌号<span id="tableresult">【】</span></span></li>
+						<li><span class="navbar-brand">点单界面：当前桌号<span id="tableresult" style="color: ghostwhite">【】</span></span></li>
 						<li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
 							 aria-expanded="false"><img id="userface" src="${waiter.faceimg}" width="24" height="24" class="img-circle"
-														style="border:1px solid #FFF" />&nbsp;&nbsp;当前用户:【<span id="username">${waiter.useraccount}</span>】,身份为服务员
+														style="border:1px solid #FFF" />&nbsp;&nbsp;当前用户:【<span id="username">小黑</span>】,身份为服务员
 								<span class="caret"></span></a>
 							<ul class="dropdown-menu">
 								<li style="text-align: center;padding-top: 15px"><img id="userface1" src="img\upload/31074021-521b-44fc-a82a-69b4ea926381.jpg" width="128" height="128"
@@ -122,7 +122,7 @@
 								<li role="separator" class="divider"></li>
 							</ul>
 						</li>
-						<li><a href="#">退出登录</a></li>
+						<li><a href="/loginout">退出登录</a></li>
 					</ul>
 					<form class="navbar-form navbar-right">
 						<input type="text" class="form-control" placeholder="设定桌号" id="tableId"><input class="btn btn-default" type="button"
