增加管理员添加员工功能,实时查询员工在线人数

--- a/order_consumer/src/main/resources/templates/pages/admin/adduser.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/adduser.html
@@ -177,7 +177,7 @@
 									<label class="sr-only" for="inputfile">文件输入</label> <input type="file" id="inputfile" name="uploadFile">
 								</div>
 
-								<input type="button" class="btn btn-danger" value="上传员工的新头像" onclick="begin()" />
+								<input type="button" class="btn btn-danger" id="uptfaces" value="上传员工的新头像" />
 							</form>
 						</div>
 
