--- a/order_consumer/src/main/resources/templates/pages/waiters/paylist.html
+++ b/order_consumer/src/main/resources/templates/pages/waiters/paylist.html
@@ -14,8 +14,7 @@
 
 <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
 <script src="/bootstrap/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="/js/ajax.js"></script>
-<script type="text/javascript">
+<!--<script type="text/javascript">
 	function createXmlDom(str) {
 		if (document.all) {
 			var xmlDom = new ActiveXObject("Microsoft.XMLDOM");
@@ -152,10 +151,10 @@
 					.removeChild(obj.parentNode.parentNode);
 		}
 	}
-</script>
+</script>-->
 </head>
 
-<body style="font-family: 微软雅黑" onload="begin()">
+<body style="font-family: 微软雅黑">
 
 	<div class="container-fluid">
 		<div class="row">
