增加查看经营数据

--- a/order_consumer/src/main/resources/templates/pages/admin/dishesadmin.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/dishesadmin.html
@@ -176,7 +176,7 @@
 		$("#myModal").modal("show");
 	}
 </script>
-<script type="text/javascript" src="/js/dishesadmin.js"></script>
+<script type="text/javascript" src="/js/admin/dishesadmin.js"></script>
 </head>
 
 <body style="font-family: 微软雅黑">
