--- a/order_consumer/src/main/resources/templates/pages/admin/useradmin.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/useradmin.html
@@ -11,7 +11,7 @@
 		<link rel="stylesheet" href="/css/dashboard.css">
 		<!-- jQuery文件。务必在bootstrap.min.js 之前引入 -->
 		<script src="/bootstrap/js/jquery-1.11.1.min.js"></script>
-		<script src="/js/adminUser.js"></script>
+		<script src="/js/admin/useradmin.js"></script>
 		<script src="/js/ajax.js"></script>
 		<!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
 		<script src="/bootstrap/js/bootstrap.min.js"></script>
