--- a/order_consumer/src/main/resources/templates/pages/admin/main_backup1.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/main_backup1.html
@@ -295,7 +295,7 @@
 
 	<!-- Modal -->
 	<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
-		aria-labelledby="myModalLabel">
+		aria-labelledby="myModalLabel" style="padding-top: 50px">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
