--- a/order_consumer/src/main/resources/templates/pages/admin/dishesadmin.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/dishesadmin.html
@@ -256,7 +256,7 @@
 						<div class="panel-body">
 
 							<div style="text-align: center;">
-								<img src="img/faces/default.jpg" id="dishesImg" width="200px"
+								<img src="/img/faces/default.jpg" id="dishesImg" width="200px"
 									height="200px" class="img-circle"
 									style="border:1px solid #CCC;box-shadow:0 0 10px rgba(100, 100, 100, 1);" />
 								</div>
