--- a/order_consumer/src/main/resources/templates/pages/admin/main_backup1.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/main_backup1.html
@@ -23,7 +23,7 @@
 <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
 <script src="/bootstrap/js/bootstrap.min.js"></script>
 <script type="text/javascript" src="/js/ajax.js"></script>
-<script type="text/javascript" src="/js/main_backup1.js"></script>
+<script type="text/javascript" src="/js/admin/main_backup1.js"></script>
 <script type="text/javascript">
 	function createXmlDom(str) {
 		if (document.all) {
