--- a/order_consumer/src/main/resources/templates/login.html
+++ b/order_consumer/src/main/resources/templates/login.html
@@ -4,13 +4,15 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Bootstrap 101 Template</title>
+	<title>登录</title>
+	<link rel="icon" href="/img/gui.ico">
 	<!-- Bootstrap -->
 	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 	<script src="/bootstrap/js/jquery-1.11.1.js"></script>
 	<script src="/bootstrap/js/bootstrap.js"></script>
 	<link href="/bootstrap/css/bootstrap.css" rel="stylesheet">
 	<link href="/bootstrap/css/main.css" rel="stylesheet">
+
 	<script type="text/javascript" src="/js/loginUser.js"></script>-
 
 	<style type="text/css">
