--- a/order_consumer/src/main/resources/templates/pages/page/waiterpage.html
+++ b/order_consumer/src/main/resources/templates/pages/page/waiterpage.html
@@ -2,7 +2,8 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>111</title>
+		<link rel="icon" href="/img/gui.ico">
+		<title>服务员</title>
 		<link rel="stylesheet" href="/css/dashboard.css">
 		<script src="/bootstrap/js/jquery-1.11.1.min.js"></script>
 <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
@@ -106,7 +107,7 @@
 						<span class="sr-only">Toggle navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<img src="/img/logo.png" class="navbar-brand" /> <span class="navbar-brand"></span>
+					<img src="/img/logo.png" class="size" /> <span class="navbar-brand"></span>
 				</div>
 				<div id="navbar" class="navbar-collapse collapse">
 					<ul class="nav navbar-nav navbar-right">
