--- a/order_consumer/src/main/resources/templates/pages/kitchen/kitchenmain.html
+++ b/order_consumer/src/main/resources/templates/pages/kitchen/kitchenmain.html
@@ -10,8 +10,8 @@
 	<meta http-equiv="description" content="This is my page">
 
 	<link rel="stylesheet" href="/css/dashboard.css">
-
-
+	<script src="/bootstrap/js/jquery-1.11.1.min.js"></script>
+	<script src="/js/kitchen/kitchenmain.js"></script>
 </head>
 
 <body style="font-family: 微软雅黑" onload="begin()">
