添加在线人数页面

--- a/order_consumer/src/main/resources/templates/pages/admin/main_backup1.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/main_backup1.html
@@ -263,14 +263,13 @@
 
 								</tbody>
 							</table>
-							<!-- 
-							<nav> 
-							<ul class="pager">
-								<li><a href="#">上一页</a></li>
-								<li><a href="#">下一页</a></li>
-							</ul>
-							</nav>
-							 -->
+                            <div class="page" style="margin-left: 600px;margin-top: 30px;">
+                                <a href="#" onclick="page('first')">首页</a>
+                                <a href="#" onclick="page('prev')">上一页</a>
+                                <a href="#" onclick="page('next')">下一页</a>
+                                <a href="#" onclick="page('end')">末页</a>
+                                <span name="pageIndex">1</span>/<span name="totalPage">1</span>页
+                            </div>
 						</div>
 
 					</div>
