--- a/order_consumer/src/main/resources/templates/pages/waiters/takeorder_backup.html
+++ b/order_consumer/src/main/resources/templates/pages/waiters/takeorder_backup.html
@@ -28,8 +28,8 @@
             overflow-y: scroll;
             width: 400px;
             position: absolute;
-            top: 1450px;
-            left: 50px;
+            top: 80%;
+            left: 4.2%;
             display: none;
             background-color: rgba(245, 245, 245, 0.5);
         }.clearfix::after {
