修改用户页面跳转+买单

--- a/order_consumer/src/main/resources/templates/pages/admin/modifyuser.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/modifyuser.html
@@ -83,7 +83,7 @@
 
 
 	<div class="container">
-		<div class="row" style="padding: 45px 0px 0px 200px">
+		<div class="row" style="padding: 45px 0px 0px 270px">
 			<div style="width: 50%;display: inline-block;">
 				<div>
 
@@ -102,7 +102,7 @@
 					<form class="form-horizontal" role="form" style="margin-top: 20px"
 						method="post" action="adminmodifyuser.order">
 						<input type="hidden" name="userId" id="userId"
-							value="${MODIFY_INFO.userId}" />
+							value="${userinfo.useraccount}" />
 						<div class="form-group">
 							<label for="firstname" class="col-sm-2 control-label">用户名:</label>
 							<div class="col-sm-10">
