--- a/order_consumer/src/main/resources/templates/pages/waiters/paylist.html
+++ b/order_consumer/src/main/resources/templates/pages/waiters/paylist.html
@@ -14,6 +14,7 @@
 
 <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
 <script src="/bootstrap/js/bootstrap.min.js"></script>
+<script type="text/javascript" src="/js/waiters/paylist.js"></script>
 <!--<script type="text/javascript">
 	function createXmlDom(str) {
 		if (document.all) {
@@ -196,6 +197,7 @@
 										<th>桌号</th>
 										<th>服务员</th>
 										<th>开餐时间</th>
+										<th>总价</th>
 										<th>操作</th>
 									</tr>
 
@@ -206,6 +208,7 @@
 								<tbody id="orderTable">
 
 									<tr>
+										<td></td>
 										<td></td>
 										<td></td>
 										<td></td>
