修改在线人数页面

--- a/order_consumer/src/main/resources/templates/pages/admin/onlinekitchens.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/onlinekitchens.html
@@ -202,16 +202,16 @@
 					
 					<div class="panel-body">
 						<div style="text-align: right;">
-							当前在线人数:<span id="sessionNum"></span>,其中后厨人员<span id="kitchenNum"></span>人
+							当前在线人数:<span id="sessionNum">0</span>人,其中后厨人员<span id="kitchenNum">0</span>人
 						</div>
 						<div class="table-responsive">
 							<table class="table table-striped">
 								<thead>
 									<tr>
-										<th>员工编号</th>
-										<th>员工帐号</th>
-										<th>员工角色</th>
-										<th>操作</th>
+										<th class="textcetern">员工编号</th>
+										<th class="textcetern">员工帐号</th>
+										<th class="textcetern">员工角色</th>
+										<th class="textcetern">操作</th>
 									</tr>
 								</thead>
 								<tbody id="orderTable">
@@ -240,7 +240,7 @@
 
 	<!-- Modal -->
 	<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
-		aria-labelledby="myModalLabel">
+		aria-labelledby="myModalLabel" style="padding-top: 10%;">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
