--- a/order_consumer/src/main/resources/templates/pages/waiters/takeorder_backup.html
+++ b/order_consumer/src/main/resources/templates/pages/waiters/takeorder_backup.html
@@ -297,7 +297,7 @@
         <div
                 style="height:1px;width: 100%;background: #CCC;margin-bottom: 10px"></div>
         <footer>
-            <p>&copy; ${ORDER_SYS_NAME}-中软国际ETC 2015</p>
+            <p>&copy; 桂花屯乡村</p>
         </footer>
     </div>
 </div>
