--- a/order_consumer/src/main/resources/templates/pages/kitchen/kitchenmain.html
+++ b/order_consumer/src/main/resources/templates/pages/kitchen/kitchenmain.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>餐厅管理员</title>
+	<title>后厨</title>
 
 	<meta http-equiv="pragma" content="no-cache">
 	<meta http-equiv="cache-control" content="no-cache">
@@ -32,8 +32,7 @@
 				</div>
 				<div class="panel-body" style="padding-bottom: 10px">
 					<h4>
-						<i class=" icon-envelope icon-large" style="color:orange;"></i>&nbsp;<span
-							id="msg"></span>
+						<i class=" icon-envelope icon-large" style="color:orange;"></i>&nbsp;<span id="message"></span>
 					</h4>
 				</div>
 			</div>
