--- a/order_consumer/src/main/resources/templates/pages/waiters/takeorder_backup.html
+++ b/order_consumer/src/main/resources/templates/pages/waiters/takeorder_backup.html
@@ -258,7 +258,7 @@
             </div>
             <div class="panel-body" style="padding-bottom: 10px">
                 <h4>
-                    <i class=" icon-envelope icon-large" style="color:orange;"></i>&nbsp;6号桌菜品：川香回锅肉已经完成！
+                    <i class=" icon-envelope icon-large" style="color:orange;"></i>&nbsp;<span id="message"></span>
                 </h4>
             </div>
         </div>
