--- a/order_consumer/src/main/resources/templates/pages/admin/useradmin.html
+++ b/order_consumer/src/main/resources/templates/pages/admin/useradmin.html
@@ -239,7 +239,7 @@
 				var userAccount = document.getElementById("userAccount");
 				var userRole = document.getElementById("role");
 				var faceimg = document.getElementById("faceimg");
-				faceimg.src = "img/faces/" + img;
+				faceimg.src =img;
 				userAccount.innerHTML = account;
 				userRole.innerHTML = role;
 				$("#myModal").modal("show");
